# Rag-Data-Generater

./: .gitignore  2wikimultihopqa_judged.jsonl  README.md  data  hotpotqa_judged.jsonl  pyproject.toml  requirements.txt  run_lora.sh  run_qwen25_32b_awq.sh  run_sft_generate.sh  trivaqa_judged.jsonl
.hf_cache/medqa/fzkuji___med_qa/med_qa_zh_4options_bigbio_qa/0.0.0/d7453aabe1e3d58e44896e6a27a1cf944ba5bebe/: dataset_info.json  med_qa-test.arrow  med_qa-validation.arrow
configs/: full_prompt_pipeline.yaml  multi_agent_langchain.yaml  single_agent_streaming.yaml
docs/: data_formats.md
examples/full_prompt_pipeline/: run_pipeline.py
examples/multi_agent_langchain/: demo.py  multi_agent_sft_generate.py
examples/single_agent_streaming/: run_single_agent.py
multi-agent/: demo.py
rag_data_generator/: __init__.py
rag_data_generator/datasets/: prepare.py
rag_data_generator/evaluation/: answer.py
rag_data_generator/llm/: client.py
rag_data_generator/pipeline/: interruption.py
rag_data_generator/prompts/: prompts.py
rag_data_generator/search/: elastic.py  wiki.py
rag_data_generator/tooling/: registry.py  tools.py
rag_data_generator/utils/: __init__.py  config.py
scripts/: add_vocab.py  check_tokens.py  filter.py  run_local_smoke.py  single.sh
tests/: test_pipeline.py
utils/: count_train_parquet.py  print_struct.py  visualize.py
