[project]
name = "rag-data-generator"
version = "0.1.0"
description = "Tool-augmented data generation helpers for RAG experiments"
requires-python = ">=3.10"
authors = [
  {name = "Codex", email = "codex@example.com"}
]
dependencies = [
  "elasticsearch>=8.12.0",
  "pandas>=2.0.0",
  "datasets>=2.18.0",
  "tqdm>=4.66.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "openai>=1.6.0",
  "pyyaml>=6.0",
  "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
